--- a/.github/workflows/client-app.yml
+++ b/.github/workflows/client-app.yml
@@ -36,10 +36,13 @@ jobs:
           echo "version=${GITHUB_REF:10}" >> $GITHUB_ENV
       - name: Create Release
         id: create_release
+        if: startsWith(github.ref, 'refs/tags/')
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
+          draft: true
+          generate_release_notes: true
           tag_name: '${{ env.version }}'
           release_name: 'AFFiNE ${{ env.version }}'
           body: 'See the assets to download this version and install.'
@@ -51,12 +54,18 @@ jobs:
       matrix:
         platform: [macos-latest, ubuntu-latest, windows-latest]
 
+    runs-on: ${{ matrix.platform }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
           submodules: 'true'
 
+      - name: install dependencies (ubuntu only)
+        if: matrix.platform == 'ubuntu-latest'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libappindicator3-dev librsvg2-dev patchelf
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
@@ -84,7 +93,7 @@ jobs:
       - name: Install dependencies
         run: pnpm i -r
 
-      - name: Make macOS (x64)
+      - name: Make App Binary
         run: pnpm build:app
         working-directory: apps/desktop
         env:
@@ -92,12 +101,8 @@ jobs:
           CI_PULL_REQUEST: ${{ github.event_name == 'pull_request' }}
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Create Release
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
-        with:
-          draft: true
-          generate_release_notes: true
-          files: apps/desktop/src-tauri/target/release/bundle/dmg/*.dmg
+      - uses: tauri-apps/tauri-action@v0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          releaseId: ${{ needs.create-release.outputs.RELEASE_UPLOAD_ID }}
