fix: Error: Resource not accessible by integration

--- a/.github/workflows/client-app.yml
+++ b/.github/workflows/client-app.yml
@@ -16,6 +16,11 @@ on:
       - 'README.md'
       - '.vscode'
 
+permissions:
+  actions: write
+  contents: write
+  security-events: write
+
 concurrency:
   group: release-ci-group
   cancel-in-progress: true
