--- a/.github/workflows/client-app.yml
+++ b/.github/workflows/client-app.yml
@@ -93,6 +93,8 @@ jobs:
           key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
             ${{ runner.os }}-pnpm-store-
+      - name: Get rust cache
+        uses: Swatinem/rust-cache@v2
 
       - name: Install dependencies
         run: pnpm i -r
