Revert "ci: use cancel workflow action"
This reverts commit 3a0761d38d0534aeb3cb05de86eae263e9bd93d5.

--- a/.github/workflows/client-app.yml
+++ b/.github/workflows/client-app.yml
@@ -21,6 +21,10 @@ permissions:
   contents: write
   security-events: write
 
+concurrency:
+  group: release-ci-group
+  cancel-in-progress: true
+
 jobs:
   create-release:
     runs-on: ubuntu-latest
