fix: hook `useLoadPublicWorkspace`

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -38,6 +38,7 @@
     "quill-cursors": "^4.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "swr": "^2.0.0",
     "yjs": "^13.5.45",
     "zustand": "^4.3.2"
   },
