--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -20,7 +20,8 @@
     "paths": {
       "@/*": ["src/*"],
       "@affine/component": ["../../packages/component/src/index"],
-      "@affine/i18n": ["../../packages/i18n/src/index"]
+      "@affine/i18n": ["../../packages/i18n/src/index"],
+      "@affine/datacenter": ["../../packages/data-center/src/index"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
