--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -21,7 +21,8 @@
       "@/*": ["src/*"],
       "@affine/component": ["../../packages/component/src/index"],
       "@affine/i18n": ["../../packages/i18n/src/index"],
-      "@affine/datacenter": ["../../packages/data-center/src/index"]
+      "@affine/datacenter": ["../../packages/data-center/src/index"],
+      "@toeverything/pathfinder-logger": ["../../packages/logger/src/index"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
