--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "pnpm --filter @affine/app dev",
     "dev:ac": "cross-env NODE_API_SERVER=ac pnpm --filter @affine/app dev",
     "dev:local": "cross-env NODE_API_SERVER=local pnpm --filter @affine/app dev",
-    "build": "pnpm --filter @affine/app dev",
+    "build": "pnpm --filter @affine/app build",
     "build:client": " pnpm --filter=@affine/client-app build:app",
     "build:storybook": " pnpm -r build-storybook",
     "export": "pnpm --filter @affine/app export",
