--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "lint": "pnpm --filter @affine/app lint",
     "test": "playwright test",
     "test:coverage": "cross-env COVERAGE=true pnpm test -- --forbid-only",
-    "test:unit": "playwright test --config=playwright.config.unit.ts",
+    "test:unit": "vitest --run",
+    "test:unit:coverage": "vitest run --coverage",
     "postinstall": "husky install",
     "notify": "node --experimental-modules scripts/notify.mjs",
     "update:blocksuite": "pnpm i --filter @affine/app --filter @affine/datacenter @blocksuite/blocks@nightly @blocksuite/store@nightly && pnpm i --filter @affine/app @blocksuite/editor@nightly"
@@ -44,7 +45,8 @@
     "lint-staged": "^13.1.0",
     "nyc": "^15.1.0",
     "prettier": "^2.7.1",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "vitest": "^0.28.5"
   },
   "eslintConfig": {
     "root": true,
