--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/node": "^18.11.17",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.47.0",
+    "@vitest/coverage-istanbul": "^0.28.5",
     "concurrently": "^7.6.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.30.0",
