--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "test:coverage": "cross-env COVERAGE=true pnpm test -- --forbid-only",
     "test:unit": "vitest --run",
     "test:unit:coverage": "vitest run --coverage",
-    "postinstall": "husky install",
+    "postinstall": "husky install && pnpm prune",
     "notify": "node --experimental-modules scripts/notify.mjs",
-    "update:blocksuite": "pnpm i --filter @affine/app --filter @affine/datacenter @blocksuite/blocks@nightly @blocksuite/store@nightly && pnpm i --filter @affine/app @blocksuite/editor@nightly"
+    "update:blocksuite": "pnpm i --filter @affine/app --filter @affine/datacenter @blocksuite/blocks@nightly @blocksuite/store@nightly && pnpm i --filter @affine/app @blocksuite/editor@nightly @blocksuite/global@nightly"
   },
   "lint-staged": {
     "*": "prettier --write --ignore-unknown",
