--- a/packages/store/package.json
+++ b/packages/store/package.json
@@ -3,16 +3,19 @@
   "private": true,
   "main": "./src/index.ts",
   "dependencies": {
+    "zustand": "^4.3.3"
+  },
+  "devDependencies": {
     "@affine/datacenter": "workspace:*",
     "@blocksuite/blocks": "0.4.1",
     "@blocksuite/editor": "0.4.1",
     "@blocksuite/global": "0.4.1",
     "@blocksuite/react": "0.4.1",
     "@blocksuite/store": "0.4.1",
+    "@types/react": "^18.0.28",
+    "lit": "^2.6.1",
     "react": "^18.2.0",
-    "zustand": "^4.3.3"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.28"
+    "react-dom": "^18.2.0",
+    "yjs": "^13.5.46"
   }
 }
