--- a/packages/data-center/package.json
+++ b/packages/data-center/package.json
@@ -13,16 +13,16 @@
     "url": "git+https://github.com/toeverything/AFFiNE.git"
   },
   "devDependencies": {
-    "@blocksuite/blocks": "0.4.1",
-    "@blocksuite/store": "0.4.1",
     "@types/debug": "^4.1.7",
     "fake-indexeddb": "4.0.1",
-    "lit": "^2.6.1",
-    "typescript": "^4.9.5",
-    "yjs": "^13.5.46"
+    "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@blocksuite/blocks": "0.4.1",
+    "@blocksuite/store": "0.4.1",
     "@tauri-apps/api": "^1.2.0",
+    "yjs": "^13.5.46",
+    "lit": "^2.6.1",
     "debug": "^4.3.4",
     "encoding": "^0.1.13",
     "firebase": "^9.17.1",
