--- a/packages/data-center/package.json
+++ b/packages/data-center/package.json
@@ -4,10 +4,6 @@
   "private": true,
   "description": "",
   "main": "./src/index.ts",
-  "scripts": {
-    "dev": "tsc --project ./tsconfig.json -w",
-    "build": "tsc --project ./tsconfig.json"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/toeverything/AFFiNE.git"
@@ -21,8 +17,6 @@
     "@blocksuite/blocks": "0.4.1",
     "@blocksuite/store": "0.4.1",
     "@tauri-apps/api": "^1.2.0",
-    "yjs": "^13.5.46",
-    "lit": "^2.6.1",
     "debug": "^4.3.4",
     "encoding": "^0.1.13",
     "firebase": "^9.17.1",
@@ -31,6 +25,8 @@
     "ky": "^0.33.2",
     "ky-universal": "^0.11.0",
     "lib0": "^0.2.62",
-    "y-protocols": "^1.0.5"
+    "lit": "^2.6.1",
+    "y-protocols": "^1.0.5",
+    "yjs": "^13.5.46"
   }
 }
