--- a/packages/store/package.json
+++ b/packages/store/package.json
@@ -14,5 +14,9 @@
     "react-dom": "^18.2.0",
     "yjs": "^13.5.46",
     "zustand": "^4.3.3"
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11"
   }
 }
