--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -22,7 +22,7 @@
     "@tauri-apps/api": "^1.2.0",
     "json-schema-to-typescript": "^11.0.2",
     "lib0": "^0.2.62",
-    "next": "^13.1.6",
+    "next": "13.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
