--- a/apps/rem/package.json
+++ b/apps/rem/package.json
@@ -11,9 +11,14 @@
   "dependencies": {
     "@affine/component": "workspace:*",
     "@affine/datacenter": "workspace:*",
+    "@blocksuite/blocks": "0.4.1",
+    "@blocksuite/editor": "0.4.1",
+    "@blocksuite/store": "0.4.1",
+    "lit": "^2.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "swr": "^2.0.3"
+    "swr": "^2.0.3",
+    "yjs": "^13.5.46"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
