feat: support page

--- a/apps/rem/package.json
+++ b/apps/rem/package.json
@@ -13,7 +13,9 @@
     "@affine/datacenter": "workspace:*",
     "@blocksuite/blocks": "0.4.1",
     "@blocksuite/editor": "0.4.1",
+    "@blocksuite/react": "0.4.1",
     "@blocksuite/store": "0.4.1",
+    "jotai": "^2.0.2",
     "lit": "^2.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
