--- a/apps/rem/package.json
+++ b/apps/rem/package.json
@@ -22,6 +22,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "swr": "^2.0.3",
+    "y-indexeddb": "^9.0.9",
     "yjs": "^13.5.46"
   },
   "devDependencies": {
