feat: update code

--- a/apps/rem/package.json
+++ b/apps/rem/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "@affine/component": "workspace:*",
     "@affine/datacenter": "workspace:*",
+    "@affine/i18n": "workspace:*",
     "@blocksuite/blocks": "0.4.1",
     "@blocksuite/editor": "0.4.1",
     "@blocksuite/react": "0.4.1",
     "@blocksuite/store": "0.4.1",
+    "@emotion/css": "^11.10.6",
     "@emotion/react": "^11.10.6",
+    "@emotion/server": "^11.10.0",
     "@mui/material": "^5.11.9",
     "jotai": "^2.0.2",
     "lit": "^2.6.1",
