--- a/apps/rem/package.json
+++ b/apps/rem/package.json
@@ -14,6 +14,7 @@
     "@affine/i18n": "workspace:*",
     "@blocksuite/blocks": "0.4.1",
     "@blocksuite/editor": "0.4.1",
+    "@blocksuite/icons": "^2.0.17",
     "@blocksuite/react": "0.4.1",
     "@blocksuite/store": "0.4.1",
     "@emotion/css": "^11.10.6",
