--- a/apps/rem/package.json
+++ b/apps/rem/package.json
@@ -12,11 +12,11 @@
     "@affine/component": "workspace:*",
     "@affine/datacenter": "workspace:*",
     "@affine/i18n": "workspace:*",
-    "@blocksuite/blocks": "0.4.1",
-    "@blocksuite/editor": "0.4.1",
+    "@blocksuite/blocks": "0.4.1-20230220214107-0a354de",
+    "@blocksuite/editor": "0.4.1-20230220214107-0a354de",
     "@blocksuite/icons": "^2.0.17",
-    "@blocksuite/react": "0.4.1",
-    "@blocksuite/store": "0.4.1",
+    "@blocksuite/react": "0.4.1-20230220214107-0a354de",
+    "@blocksuite/store": "0.4.1-20230220214107-0a354de",
     "@emotion/css": "^11.10.6",
     "@emotion/react": "^11.10.6",
     "@emotion/server": "^11.10.0",
