--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "dev:ac": "cross-env NODE_API_SERVER=ac pnpm --filter @affine/app dev",
     "dev:local": "cross-env NODE_API_SERVER=local pnpm --filter @affine/app dev",
     "build": "pnpm --filter @affine/app build",
+    "build:rem": "pnpm --filter @affine/rem build",
     "build:client": " pnpm --filter=@affine/client-app build:app",
     "build:storybook": " pnpm -r build-storybook",
     "export": "pnpm --filter @affine/app export",
+    "export:rem": "pnpm --filter @affine/rem export",
     "start": "pnpm --filter @affine/app start",
     "lint": "eslint . --ext .js,.ts,.mts,.tsx",
     "lint:fix": "eslint . --ext .js,.ts,.mts,.tsx --fix",
