--- a/apps/rem/package.json
+++ b/apps/rem/package.json
@@ -34,6 +34,7 @@
     "@types/react-dom": "^18.0.11",
     "next": "^13.1.6",
     "next-debug-local": "^0.1.5",
+    "next-router-mock": "^0.9.2",
     "typescript": "^4.9.5"
   }
 }
