--- a/apps/desktop/src-tauri/Cargo.toml
+++ b/apps/desktop/src-tauri/Cargo.toml
@@ -35,7 +35,8 @@ schemars = "0.8.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 dotenvy = "0.15.6"
-tauri = { version = "1.2", features = ["api-all", "devtools"] }
+tauri = { version = "1.2", features = ["api-all", "devtools", "system-tray"] }
+tauri-plugin-positioner = { version = "1.0.4", features = ["system-tray"] }
 tokio = { version = "1.23.0", features = ["rt", "macros"] }
 lib0 = "0.12.0"
 moka = { version = "0.9.6", features = ["future"] }
