feat: runtime config

--- a/apps/rem/package.json
+++ b/apps/rem/package.json
@@ -28,7 +28,8 @@
     "react-dom": "^18.2.0",
     "swr": "^2.0.3",
     "y-indexeddb": "^9.0.9",
-    "yjs": "^13.5.46"
+    "yjs": "^13.5.46",
+    "zod": "^3.20.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
