--- a/apps/rem/package.json
+++ b/apps/rem/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "dotenv": "^16.0.3",
     "next": "^13.2.0",
     "next-debug-local": "^0.1.5",
     "next-router-mock": "^0.9.2",
