--- a/apps/rem/tsconfig.json
+++ b/apps/rem/tsconfig.json
@@ -14,6 +14,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
+    "jsxImportSource": "@emotion/react",
     "incremental": true,
     "experimentalDecorators": true,
     "baseUrl": "."
