--- a/apps/rem/.env.local.template
+++ b/apps/rem/.env.local.template
@@ -11,4 +11,4 @@ LOCAL_BLOCK_SUITE=
 NODE_API_SERVER=
 # save workspace to idb
 ENABLE_IDB_PROVIDER=1
-PREFETCH_AFFINE_REMOTE_WORKSPACE=1
+PREFETCH_WORKSPACE=1
