--- a/apps/rem/package.json
+++ b/apps/rem/package.json
@@ -29,6 +29,7 @@
     "lit": "^2.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
     "swr": "^2.0.4",
     "y-indexeddb": "^9.0.9",
     "yjs": "^13.5.47",
