--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "react-dom": "^18.2.0",
     "typescript": "^4.9.5",
     "vite": "^4.1.2",
-    "vitest": "^0.28.5"
+    "vitest": "^0.28.5",
+    "vitest-fetch-mock": "^0.2.2"
   },
   "pnpm": {
     "patchedDependencies": {
