--- a/apps/rem/package.json
+++ b/apps/rem/package.json
@@ -17,9 +17,9 @@
     "@blocksuite/icons": "^2.0.17",
     "@blocksuite/react": "0.4.1-20230220214107-0a354de",
     "@blocksuite/store": "0.4.1-20230220214107-0a354de",
+    "@emotion/cache": "^11.10.5",
     "@emotion/css": "^11.10.6",
     "@emotion/react": "^11.10.6",
-    "@emotion/server": "^11.10.0",
     "@mui/material": "^5.11.10",
     "cmdk": "^0.1.22",
     "css-spring": "^4.1.0",
