--- a/apps/rem/package.json
+++ b/apps/rem/package.json
@@ -36,14 +36,16 @@
     "zod": "^3.20.6"
   },
   "devDependencies": {
+    "@redux-devtools/extension": "^3.2.5",
     "@swc-jotai/debug-label": "^0.0.6",
     "@swc-jotai/react-refresh": "^0.0.4",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "dotenv": "^16.0.3",
-    "next": "^13.2.0",
+    "next": "^13.2.1",
     "next-debug-local": "^0.1.5",
     "next-router-mock": "^0.9.2",
+    "redux": "^4.2.1",
     "typescript": "^4.9.5"
   }
 }
