--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -46,6 +46,7 @@
     "next": "^13.2.2",
     "next-debug-local": "^0.1.5",
     "next-router-mock": "^0.9.2",
+    "raw-loader": "^4.0.2",
     "redux": "^4.2.1",
     "typescript": "^4.9.5"
   }
