--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -43,6 +43,7 @@
     "@types/react-dom": "^18.0.11",
     "@types/webpack-env": "^1.18.0",
     "dotenv": "^16.0.3",
+    "eslint-config-next": "^13.2.2",
     "next": "^13.2.2",
     "next-debug-local": "^0.1.5",
     "next-router-mock": "^0.9.2",
