--- a/packages/env/package.json
+++ b/packages/env/package.json
@@ -5,5 +5,8 @@
   "devDependencies": {
     "next": "^13.2.3",
     "zod": "^3.20.6"
+  },
+  "dependencies": {
+    "@blocksuite/global": "0.4.1-20230220214107-0a354de"
   }
 }
