--- a/packages/component/package.json
+++ b/packages/component/package.json
@@ -19,29 +19,29 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/base": "5.0.0-alpha.118",
-    "@mui/icons-material": "^5.11.9",
-    "@mui/material": "^5.11.9",
+    "@mui/icons-material": "^5.11.11",
+    "@mui/material": "^5.11.11",
     "lit": "^2.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^7.0.0-beta.46",
-    "@storybook/addon-essentials": "^7.0.0-beta.46",
-    "@storybook/addon-links": "^7.0.0-beta.46",
-    "@storybook/builder-vite": "^7.0.0-beta.46",
-    "@storybook/react": "^7.0.0-beta.46",
+    "@storybook/addon-actions": "7.0.0-beta.60",
+    "@storybook/addon-essentials": "7.0.0-beta.60",
+    "@storybook/addon-links": "7.0.0-beta.60",
+    "@storybook/builder-vite": "7.0.0-beta.60",
+    "@storybook/react": "7.0.0-beta.60",
     "@storybook/react-vite": "7.0.0-beta.46",
-    "@swc/core": "^1.3.35",
+    "@swc/core": "^1.3.37",
     "@types/react": "^18.0.28",
     "@types/react-dom": "18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
-    "storybook": "^7.0.0-beta.46",
+    "storybook": "7.0.0-beta.60",
     "swc": "^1.0.11",
     "swc-loader": "^0.2.3",
     "typescript": "^4.9.5",
     "vite": "^4.1.2",
     "webpack": "^5.75.0",
-    "yjs": "^13.5.47"
+    "yjs": "^13.5.48"
   }
 }
