--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,7 +16,7 @@
     "@affine/i18n": "workspace:*",
     "@blocksuite/blocks": "0.5.0-20230302142916-8e090d3",
     "@blocksuite/editor": "0.5.0-20230302142916-8e090d3",
-    "@blocksuite/icons": "^2.0.18",
+    "@blocksuite/icons": "2.0.17",
     "@blocksuite/react": "0.5.0-20230302142916-8e090d3",
     "@blocksuite/store": "0.5.0-20230302142916-8e090d3",
     "@emotion/cache": "^11.10.5",
