--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,9 +20,9 @@
     "@blocksuite/react": "0.5.0-20230303192351-13b0dd7",
     "@blocksuite/store": "0.5.0-20230303192351-13b0dd7",
     "@emotion/cache": "^11.10.5",
-    "@emotion/css": "^11.10.6",
     "@emotion/react": "^11.10.6",
     "@emotion/server": "^11.10.0",
+    "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.11.11",
     "@mui/styled-engine-sc": "^5.11.11",
     "cmdk": "^0.1.22",
