--- a/packages/component/package.json
+++ b/packages/component/package.json
@@ -16,7 +16,9 @@
     "@blocksuite/icons": "2.0.17",
     "@blocksuite/react": "0.5.0-20230303192351-13b0dd7",
     "@blocksuite/store": "0.5.0-20230303192351-13b0dd7",
+    "@emotion/cache": "^11.10.5",
     "@emotion/react": "^11.10.6",
+    "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.6",
     "@mui/base": "5.0.0-alpha.119",
     "@mui/icons-material": "^5.11.11",
