fix: build script

--- a/.github/workflows/compressed-size.yml
+++ b/.github/workflows/compressed-size.yml
@@ -27,5 +27,5 @@ jobs:
           ENABLE_DEBUG_PAGE: ''
         with:
           repo-token: '${{ secrets.GITHUB_TOKEN }}'
-          build-script: 'size-check'
+          build-script: 'build:export'
           pattern: 'apps/web/out/**/*.{js,css,html,json}'
