--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev:ac": "cross-env NODE_API_SERVER=ac pnpm --filter @affine/app dev",
     "dev:local": "cross-env NODE_API_SERVER=local pnpm --filter @affine/app dev",
     "build": "pnpm --filter @affine/app build",
+    "build:export": "pnpm run build && pnpm run export",
     "build:client": "pnpm --filter @affine/client-app build:app",
     "build:storybook": "pnpm -r build-storybook",
     "export": "pnpm --filter @affine/app export",
@@ -22,7 +23,6 @@
     "test:unit:coverage": "vitest run --coverage",
     "postinstall": "husky install",
     "notify": "node scripts/notify.mjs",
-    "size-check": "pnpm run build && pnpm run export",
     "update:core": "pnpm up @blocksuite/*@nightly !@blocksuite/icons -r"
   },
   "lint-staged": {
