--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
   build:
     name: Build on Pull Request
     if: github.ref != 'refs/heads/master'
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     environment: development
 
     steps:
@@ -62,7 +62,11 @@ jobs:
 
   lint:
     name: Lint and E2E Test
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        shard: [1, 2, 3, 4]
     environment: development
     needs: build
 
@@ -80,13 +84,19 @@ jobs:
         with:
           name: artifact
           path: ./apps/web/.next
-
-      - name: Lint & E2E Test & Unit Test
+      - name: Lint
         run: |
           pnpm lint --max-warnings=0
-          npx playwright install chromium
-          pnpm run test:coverage
-          pnpm run test:unit
+      - name: Install playwright browsers
+        run: npx playwright install chromium
+      - name: Run playwright tests
+        run: pnpm test -- --forbid-only --shard=${{ matrix.shard }}/${{ strategy.job-total }}
+        env:
+          COVERAGE: true
+      - name: Unit Test
+        run: pnpm run test:unit
+        env:
+          COVERAGE: true
         # env:
         #   NEXT_PUBLIC_FIREBASE_API_KEY: ${{ secrets.NEXT_PUBLIC_FIREBASE_API_KEY }}
         #   NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN: ${{ secrets.NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN }}
@@ -119,7 +129,7 @@ jobs:
   build-frontend:
     name: Build frontend
     if: github.ref == 'refs/heads/master'
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     environment: production
 
     steps:
