fix: unit test report

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -145,7 +145,7 @@ jobs:
         uses: codecov/codecov-action@v3
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          files: ./.coverage/lcov.info
+          files: ./.coverage/store/lcov.info
           flags: unittest
           name: affine
           fail_ci_if_error: true
