--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
       "@affine/datacenter": ["./packages/datacenter/src"],
       "@affine/i18n": ["./packages/i18n/src"],
       "@affine/debug": ["./packages/debug"],
-      "@affine/env": ["./packages/env"]
+      "@affine/env": ["./packages/env"],
+      "@affine/mock": ["./packages/mock"]
     }
   },
   "references": [
@@ -48,6 +49,9 @@
     },
     {
       "path": "./packages/env"
+    },
+    {
+      "path": "./packages/mock"
     }
   ],
   "files": [],
