--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -2,6 +2,7 @@
   "name": "@affine/app",
   "private": true,
   "scripts": {
+    "postinstall": "msw init ./public",
     "dev": "next dev -p 8080",
     "build": "next build",
     "export": "next export",
