--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "author": "toeverything",
   "license": "MPL-2.0",
   "scripts": {
-    "dev": "pnpm --filter @affine/app dev",
+    "dev": "run-p dev:web dev:component",
+    "dev:web": "pnpm --filter @affine/web dev",
+    "dev:component": "pnpm --filter @affine/component storybook",
     "dev:ac": "NODE_API_SERVER=ac pnpm --filter @affine/app dev",
     "dev:local": "NODE_API_SERVER=local pnpm --filter @affine/app dev",
     "build": "pnpm --filter @affine/app build",
@@ -51,6 +53,7 @@
     "happy-dom": "^8.9.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.1.2",
+    "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
     "prettier": "^2.8.4",
     "react": "^18.2.0",
