--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "dev:ac": "NODE_API_SERVER=ac pnpm --filter @affine/app dev",
     "dev:local": "NODE_API_SERVER=local pnpm --filter @affine/app dev",
     "build": "pnpm --filter @affine/app build",
+    "build:e2e": "run-p build build:storybook",
     "build:client": "pnpm --filter @affine/client-app build:app",
     "build:storybook": "pnpm -r build-storybook",
     "export": "pnpm --filter @affine/app export",
     "start": "pnpm --filter @affine/app start",
+    "start:storybook": "pnpm dlx serve packages/component/storybook-static -l 6006",
+    "start:e2e": "run-p start start:storybook",
     "lint": "eslint . --ext .js,mjs,.ts,.tsx",
     "lint:fix": "pnpm lint --fix",
     "test": "playwright test",
