--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,9 +34,7 @@ jobs:
         with:
           path: |
             apps/web/.next/cache
-          # Generate a new cache whenever packages or source files change.
           key: ${{ runner.os }}-nextjs-${{ hashFiles('**/pnpm-lock.yaml') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
-          # If source files changed but packages didn't, rebuild from a prior cache.
           restore-keys: |
             ${{ runner.os }}-nextjs-${{ hashFiles('**/pnpm-lock.yaml') }}-
 
@@ -63,6 +61,37 @@ jobs:
           name: artifact
           path: ./apps/web/.next
 
+  build-e2e:
+    name: Build Storybook on Pull Request
+    if: github.ref != 'refs/heads/master'
+    runs-on: ubuntu-latest
+    environment: development
+    steps:
+      - uses: actions/checkout@v3
+      - uses: pnpm/action-setup@v2
+      - uses: actions/setup-node@v3
+        with:
+          node-version-file: '.nvmrc'
+          cache: 'pnpm'
+
+      - name: Restore cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            packages/component/storybook-static
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/pnpm-lock.yaml') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
+          restore-keys: |
+            ${{ runner.os }}-storybook-${{ hashFiles('**/pnpm-lock.yaml') }}-
+
+      - name: Build
+        run: pnpm i && pnpm run build:storybook
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: artifact-storybook
+          path: ./packages/component/storybook-static
+
   e2e-test:
     name: E2E Test
     runs-on: ubuntu-latest
@@ -71,7 +100,7 @@ jobs:
       matrix:
         shard: [1, 2, 3, 4]
     environment: development
-    needs: build
+    needs: [build, build-e2e]
 
     steps:
       - uses: actions/checkout@v3
@@ -87,6 +116,12 @@ jobs:
         with:
           name: artifact
           path: ./apps/web/.next
+
+      - name: Download storybook artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: artifact-storybook
+          path: ./packages/component/storybook-static
 
       - name: Install playwright browsers
         run: npx playwright install chromium
