--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "dev": "run-p dev:web dev:component",
     "dev:web": "pnpm --filter @affine/web dev",
     "dev:component": "pnpm --filter @affine/component storybook",
-    "dev:ac": "NODE_API_SERVER=ac pnpm --filter @affine/app dev",
-    "dev:local": "NODE_API_SERVER=local pnpm --filter @affine/app dev",
-    "build": "pnpm --filter @affine/app build",
+    "dev:ac": "NODE_API_SERVER=ac pnpm --filter @affine/web dev",
+    "dev:local": "NODE_API_SERVER=local pnpm --filter @affine/web dev",
+    "build": "pnpm --filter @affine/web build",
     "build:e2e": "run-p build build:storybook",
     "build:client": "pnpm --filter @affine/client-app build:app",
     "build:storybook": "pnpm -r build-storybook",
-    "export": "pnpm --filter @affine/app export",
-    "start": "pnpm --filter @affine/app start",
+    "export": "pnpm --filter @affine/web export",
+    "start": "pnpm --filter @affine/web start",
     "start:storybook": "pnpm dlx serve packages/component/storybook-static -l 6006",
     "start:e2e": "run-p start start:storybook",
     "lint": "eslint . --ext .js,mjs,.ts,.tsx",
