--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-dom": "^18.2.0",
     "typescript": "^4.9.5",
     "vite": "^4.1.2",
+    "vite-plugin-istanbul": "^4.0.1",
     "vitest": "^0.28.5",
     "vitest-fetch-mock": "^0.2.2"
   },
