fix: add serve package

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build:storybook": "pnpm -r build-storybook",
     "export": "pnpm --filter @affine/web export",
     "start": "pnpm --filter @affine/web start",
-    "start:storybook": "pnpm dlx serve packages/component/storybook-static -l 6006",
+    "start:storybook": "pnpm exec serve packages/component/storybook-static -l 6006",
     "start:e2e": "run-p start start:storybook",
     "lint": "eslint . --ext .js,mjs,.ts,.tsx",
     "lint:fix": "pnpm lint --fix",
@@ -61,6 +61,7 @@
     "prettier": "^2.8.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "serve": "^14.2.0",
     "typescript": "^4.9.5",
     "vite": "^4.1.2",
     "vite-plugin-istanbul": "^4.0.1",
