--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -5,4 +5,4 @@ contact_links:
     about: Feel free to ask and answer questions over in GitHub Discussions
   - name: AFFiNE Community Support
     url: https://community.affine.pro
-    about: AFFiNE Community page - a place to ask, learn and engage with others
+    about: AFFiNE Community - a place to ask, learn and engage with others
