--- a/apps/electron/package.json
+++ b/apps/electron/package.json
@@ -1,5 +1,15 @@
 {
-  "name": "@affine/electron-app",
+  "name": "@affine/electron",
   "private": true,
-  "version": "0.0.0"
+  "version": "0.0.0",
+  "scripts": {
+    "dev:app": "node scripts/watch.mjs",
+    "postinstall": "ELECTRON_RUN_AS_NODE=1 electron scripts/update-electron-vendors.mjs"
+  },
+  "devDependencies": {
+    "dts-for-context-bridge": "^0.7.1",
+    "electron": "^23.1.3",
+    "electron-builder": "^23.6.0",
+    "vite": "^4.1.4"
+  }
 }
