--- a/apps/electron/layers/main/tsconfig.json
+++ b/apps/electron/layers/main/tsconfig.json
@@ -7,6 +7,7 @@
     "skipLibCheck": true,
     "strict": true,
     "isolatedModules": true,
+    "allowSyntheticDefaultImports": true,
 
     "types": ["node"]
   },
