--- a/apps/electron/package.json
+++ b/apps/electron/package.json
@@ -1,15 +1,28 @@
 {
   "name": "@affine/electron",
+  "productName": "AFFiNE",
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "dev:app": "node scripts/watch.mjs",
+    "dev": "node scripts/watch.mjs",
+    "package": "electron-forge package",
+    "make": "electron-forge make",
     "postinstall": "ELECTRON_RUN_AS_NODE=1 electron scripts/update-electron-vendors.mjs"
   },
+  "config": {
+    "forge": "./forge.config.js"
+  },
+  "main": "./layers/main/dist/index.cjs",
   "devDependencies": {
+    "@electron-forge/cli": "^6.0.5",
+    "@electron-forge/maker-deb": "^6.0.5",
+    "@electron-forge/maker-squirrel": "^6.0.5",
+    "@electron-forge/maker-zip": "^6.0.5",
     "dts-for-context-bridge": "^0.7.1",
     "electron": "^23.1.3",
-    "electron-builder": "^23.6.0",
     "vite": "^4.1.4"
+  },
+  "dependencies": {
+    "electron-window-state": "^5.0.3"
   }
 }
