--- a/apps/electron/package.json
+++ b/apps/electron/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "dev": "node scripts/watch.mjs",
+    "dev": "node scripts/dev.mjs",
     "package": "electron-forge package",
     "make": "electron-forge make",
     "postinstall": "ELECTRON_RUN_AS_NODE=1 electron scripts/update-electron-vendors.mjs"
@@ -12,7 +12,7 @@
   "config": {
     "forge": "./forge.config.js"
   },
-  "main": "./layers/main/dist/index.cjs",
+  "main": "./layers/main/dist/index.js",
   "devDependencies": {
     "@electron-forge/cli": "^6.0.5",
     "@electron-forge/maker-deb": "^6.0.5",
@@ -20,7 +20,7 @@
     "@electron-forge/maker-zip": "^6.0.5",
     "dts-for-context-bridge": "^0.7.1",
     "electron": "^23.1.3",
-    "vite": "^4.1.4"
+    "esbuild": "^0.17.8"
   },
   "dependencies": {
     "electron-window-state": "^5.0.3"
