--- a/apps/electron/package.json
+++ b/apps/electron/package.json
@@ -15,9 +15,14 @@
   "main": "./layers/main/dist/index.js",
   "devDependencies": {
     "@electron-forge/cli": "^6.0.5",
+    "@electron-forge/core": "^6.0.5",
+    "@electron-forge/core-utils": "^6.0.5",
     "@electron-forge/maker-deb": "^6.0.5",
+    "@electron-forge/maker-dmg": "^6.0.5",
     "@electron-forge/maker-squirrel": "^6.0.5",
     "@electron-forge/maker-zip": "^6.0.5",
+    "@electron-forge/shared-types": "^6.0.5",
+    "@electron/rebuild": "^3.2.10",
     "dts-for-context-bridge": "^0.7.1",
     "electron": "^23.1.3",
     "esbuild": "^0.17.8"
