--- a/apps/electron/package.json
+++ b/apps/electron/package.json
@@ -5,8 +5,8 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "node scripts/dev.mjs",
-    "package": "electron-forge package",
-    "make": "electron-forge make",
+    "prod": "NODE_ENV=production node scripts/dev.mjs",
+    "make": "zx scripts/make.mjs",
     "postinstall": "ELECTRON_RUN_AS_NODE=1 electron scripts/update-electron-vendors.mjs"
   },
   "config": {
@@ -25,7 +25,8 @@
     "@electron/rebuild": "^3.2.10",
     "dts-for-context-bridge": "^0.7.1",
     "electron": "^23.1.3",
-    "esbuild": "^0.17.8"
+    "esbuild": "^0.17.8",
+    "zx": "^7.2.0"
   },
   "dependencies": {
     "electron-window-state": "^5.0.3"
