--- a/.github/workflows/client-app.yml
+++ b/.github/workflows/client-app.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       version:
-        description: App Vesion
+        description: App Version
         required: false
         default: 0.1.0
 
@@ -27,10 +27,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: setup node
-        uses: actions/setup-node@v1
-        with:
-          node-version: 16
       - name: create release
         id: create-release
         uses: actions/github-script@v6
@@ -40,7 +36,7 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               tag_name: `affine-client-v${{ github.event.inputs.version }}`,
-              name: `Affine Client v${{ github.event.inputs.version }}`,
+              name: `AFFiNE Client v${{ github.event.inputs.version }}`,
               body: 'Take a look at the assets to download and install this app.',
               draft: true,
               prerelease: false
@@ -52,7 +48,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        platform: [macos-latest, ubuntu-latest, windows-latest]
+        # platform: [macos-latest, ubuntu-latest, windows-latest]
+        platform: [macos-latest] # TODO: add other platforms
 
     runs-on: ${{ matrix.platform }}
     steps:
@@ -62,48 +59,11 @@ jobs:
         with:
           node-version-file: '.nvmrc'
           cache: 'pnpm'
-      - run: pnpm i
+      - run: yarn install # that's right, yarn
+        working-directory: apps/electron
 
-      - name: install dependencies (ubuntu only)
-        if: matrix.platform == 'ubuntu-latest'
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libappindicator3-dev librsvg2-dev patchelf
-      - name: install Rust stable
-        uses: dtolnay/rust-toolchain@stable
-
-      - name: Get rust cache
-        uses: Swatinem/rust-cache@v2
-        id: rust-cache
-        with:
-          workspaces: |
-            apps/desktop/src-tauri
-
-      - name: Upload to release on git tag Or output artifact path on nightly
-        uses: tauri-apps/tauri-action@v0
-        id: tauri-action
+      - name: Make Electron
         env:
           CI_PULL_REQUEST: ${{ github.event_name == 'pull_request' }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          releaseId: ${{ needs.create-release.outputs.release_id }}
-
-  publish-release:
-    runs-on: ubuntu-latest
-    needs: [create-release, build-tauri]
-
-    steps:
-      - name: publish pre release
-        id: publish-pre-release
-        uses: actions/github-script@v6
-        env:
-          release_id: ${{ needs.create-release.outputs.release_id }}
-        with:
-          script: |
-            github.rest.repos.updateRelease({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              release_id: process.env.release_id,
-              draft: false,
-              prerelease: true
-            })
+        run: yarn make
